# wyattowalsh

./: .env.example  .gitignore  AGENTS.md  Makefile  README.html  README.md  banner.jsx  config.yaml  languages.md  pyproject.toml  resources.md  skills-lock.json  skills.yaml  techs.md  topics.md
.agents/skills/docs-steward/scripts/: api-surface-extractor.py  doc-coverage-analyzer.py
.cursor/context/: README.md  badges_frontend.md  crawl_docs_github_com_8f0057_collection_20250427_193208.md  docsify-docs-pack.md  docsify-material-icons-README.md  repomix-output-lowlighter-metrics.md  wordcloud-doc-rst.md  wyattowalsh-readme-details-notepad.md  wyattowalsh-readme-summary-notepad.md
.cursor/rules/: 01-project-overview.mdc  02-asset-generation-scripts.mdc  03-github-actions-automation.mdc  04-local-development.mdc  05-python-versioning-and-dependencies.mdc
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LIVING-ART-RELEASE.md  LIVING-ART-ROLLBACK.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  custom_issue.md  feature_request.md
.github/assets/: languages.md  technologies.csv  technologies_with_icon.csv  topics.md
.github/assets/img/: living-art-manifest.json  living-art-preview.html
.github/assets/img/readme/: featured-projects.manifest.json
.github/workflows/: awesome-stars.yml  blog-post-workflow.yml  blog.yml  main.yml  metrics.yml  profile-updater.yml  qr.yml  waka.yml  wordclouds.yml
.serena/: project.yml
docs/: .gitignore  README.md  _sidebar.md  index.html  middleware.ts  next.config.mjs  notes.md  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
docs/app/: global.css  layout.tsx  page.tsx
docs/app/(home)/: layout.tsx  page.tsx
docs/app/admin/: layout.tsx  page.tsx
docs/app/admin/login/: page.tsx
docs/app/api/search/: route.ts
docs/app/docs/: layout.tsx
docs/app/docs/[[...slug]]/: page.tsx
docs/components/: mdx.tsx  telemetry-provider.tsx
docs/content/docs/: index.mdx
docs/content/docs/cli/: auth.mdx  config.mdx  dev.mdx  generate.mdx  index.mdx  meta.json  show-settings.mdx
docs/content/docs/data/: fetch-history.mdx  fetch-metrics.mdx  meta.json
docs/content/docs/development/: architecture.mdx  meta.json  testing.mdx
docs/content/docs/getting-started/: configuration.mdx  fork-and-repurpose.mdx  index.mdx  meta.json
docs/content/docs/scripts/: animated-art.mdx  banner.mdx  generative-art.mdx  ink-garden.mdx  (+10 more)
docs/lib/: layout.shared.tsx
docs/lib/server/: admin-auth.ts  config.ts  session.ts  telemetry-store.ts  telemetry.ts
docs/plans/: 2026-03-22-living-arts-data-enrichment.md
docs/public/showcase/: featured-projects.manifest.json  living-art-manifest.json  living-art-preview.html
docs/scripts/: banner.md  cli.md  qr.md  word-clouds.md
docs/styles/: home.css  stack.css
docs1/: 404.md  README.md  index.html  stack.md
docs1/scripts/: cli.md  qr.md  technologies.md  workflows.md
docs1/styles/: 404.css  sidebar.css  theme.css
logs/: pytest-logs.txt  report.html
logs/json/: 2025-05-29.json  2025-05-30.json  2025-05-31.json  2025-06-02.json  2025-06-03.json  2025-08-02.json  2026-02-26.json  2026-02-27.json  2026-03-01.json  2026-03-02.json  2026-03-03.json
scripts/: AGENTS.md  __init__.py  _github_http.py  animated_art.py  banner.py  banner_patterns.py  cli.py  config.py  fetch_history.py  fetch_metrics.py  generative.py  metrics_svg.py  preview_readme.py  qr.py  qr_requirements.txt  readme_card_types.py  readme_sections.py  readme_svg.py  skills.py  spotify_auth.py  supplemental_metrics.py  techs.py  utils.py  word_cloud_renderers.py  word_cloud_requirements.txt  word_clouds.py
scripts/art/: __init__.py  _dev_profiles.py  animate.py  artifacts.py  cosmic_genesis.py  daily_snapshots.py  ferrofluid.py  genetic_landscape.py  ink_garden.py  lenia.py  optimize.py  physarum.py  prototype_aurora.py  prototype_flame.py  prototype_nebula.py  prototype_v10.py  prototype_v2.py  prototype_v3.py  prototype_v4.py  prototype_v5.py  prototype_v6.py  prototype_v7.py  prototype_v8.py  prototype_v9.py  run_prototypes.py  shared.py  timelapse.py  topography.py  unfurling_spiral.py
scripts/cli/: __init__.py  __main__.py  _app.py  _display.py  auth.py  config_cmd.py  dev.py  generate.py  settings_cmd.py
scripts/readme_cards/: __init__.py  blog.py  connect.py  featured.py
scripts/word_clouds/: __init__.py  clustered.py  colors.py  core.py  engine.py  generate.py  metaheuristic.py  readability.py  shaped.py  solvers.py  typographic.py  wordle.py
tests/: AGENTS.md  conftest.py  test_art_color_science.py  test_art_shared_timeline_helpers.py  test_banner.py  test_card_contracts_blog_red.py  test_card_contracts_connect_red.py  test_card_contracts_determinism_red.py  test_card_contracts_featured_red.py  test_card_contracts_red.py  test_cli.py  test_cli_readme_wiring.py  test_daily_snapshots_fidelity.py  test_ferrofluid.py  test_fetch_history.py  test_fetch_metrics.py  test_genetic_landscape.py  test_ink_garden.py  test_ink_garden_timeline.py  test_lenia.py  test_living_art_contracts.py  test_living_art_dark_mode_contrast.py  test_living_art_e2e_rehearsal.py  test_living_art_media.py  test_living_art_render_state.py  test_living_art_sampling.py  test_living_art_signal_flow.py  test_metrics_svg.py  test_physarum.py  test_profile_workflow.py  test_qr.py  test_readme_card_types.py  test_readme_cards_blog.py  test_readme_cards_connect.py  test_readme_cards_featured.py  test_readme_gfm_ux.py  test_readme_sections.py  test_readme_svg.py  test_skills.py  test_spotify_auth.py  (+8 more)
tests/fixtures/: simple_icons_slugs_used.txt
(+5 files in other folders)
