[project]
name = "wyattowalsh"
version = "0.1.0"
description = "github profile repo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.2.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "noise>=1.2.2",
    "numpy>=2.2.6",
    "pillow>=11.2.1",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "svgwrite>=1.4.3",
    "typer>=0.16.0",
]

[project.scripts]
readme = "scripts.cli:app"

[project.optional-dependencies]
banner = [
    "svgwrite>=1.4.3",
]
format = [
    "autoflake>=2.3.1",
    "autopep8>=2.3.2",
    "black>=25.1.0",
    "isort>=6.0.1",
]
lint = [
    "mypy>=1.15.0",
    "pylint>=3.3.7",
    "ruff>=0.11.11",
]
qr = [
    "qrcode-artistic>=3.0.2",
    "segno>=1.6.6",
]
test = [
    "hypothesis>=6.131.30",
    "pytest>=8.3.5",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=6.1.1",
    "pytest-emoji>=0.2.0",
    "pytest-html>=4.1.1",
    "pytest-icdiff>=0.9",
    "pytest-instafail>=0.5.0",
    "pytest-mock>=3.14.1",
    "pytest-sugar>=1.0.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.7.0",
]
word-clouds = [
    "beautifulsoup4>=4.13.4",
    "fonttools>=4.58.1",
    "markdown>=3.8",
    "wordcloud>=1.9.4",
]
script-tools = [
    "starred>=1.5.1",
]

[tool.pytest.ini_options]
addopts = "-n auto --verbose --hypothesis-show-statistics --html=logs/report.html --self-contained-html --emoji --instafail --cov=./scripts --cov-append --cov-report html:logs/coverage"
testpaths = ["tests"]
console_output_style = "progress"
junit_logging = "all"
log_cli = true
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s - [%(levelname)s] - %(name)s - (%(filename)s).%(funcName)s(%(lineno)d) - %(message)s"
log_cli_level = "DEBUG"
log_file = "logs/pytest-logs.txt"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
log_file_format = "%(asctime)s - [%(levelname)s] - %(name)s - (%(filename)s).%(funcName)s(%(lineno)d) - %(message)s"
log_file_level = "DEBUG"
log_format = "%(asctime)s - [%(levelname)s] - %(name)s - (%(filename)s).%(funcName)s(%(lineno)d) - %(message)s"
log_level = "DEBUG"
required_plugins = ["pytest-sugar", "pytest-html", "pytest-emoji", "pytest-icdiff", "pytest-instafail", "pytest-timeout", "pytest-benchmark", "pytest-cov"]
timeout = 500

[tool.coverage.run]
data_file = "logs/.coverage"

[tool.isort]
profile = "black"
src_paths = ["./scripts", "tests"]

[tool.autoflake]
remove-all-unused-imports = true
remove-unused-variables = true
in-place = true
ignore-init-module-imports = true

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scripts"]

[tool.uv]
package = true
