[project]
name = "readme"
version = "0.1.0"
description = "github profile repo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.3.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "noise>=1.2.2",
    "numpy>=2.2.6",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "scipy>=1.16.3",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "svgwrite>=1.4.3",
    "typer>=0.24.1",
    "defusedxml>=0.7.1",
]

[project.scripts]
readme = "scripts.cli:app"

[project.optional-dependencies]
format = [
    "ruff>=0.15.8",
]
lint = [
    "mypy>=1.19.1",
    "pylint>=4.0.5",
    "ruff>=0.15.8",
]
qr = [
    "cairosvg>=2.9.0",
    "qrcode-artistic>=3.0.2",
    "segno>=1.6.6",
]
test = [
    "hypothesis>=6.151.10",
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.1.0",
    "pytest-emoji>=0.2.0",
    "pytest-html>=4.2.0",
    "pytest-icdiff>=0.9",
    "pytest-instafail>=0.5.0",
    "pytest-mock>=3.15.1",
    "pytest-sugar>=1.1.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "readme[qr]",
]
word-clouds = [
    "beautifulsoup4>=4.14.3",
    "fonttools>=4.62.1",
    "markdown>=3.10.2",
    "wordcloud>=1.9.6",
]
script-tools = [
    "starred>=4.3.0",
]
dev = [
    "readme[format,lint,test]",
]

[tool.pytest.ini_options]
addopts = "-n auto --verbose --hypothesis-show-statistics --html=logs/report.html --self-contained-html --emoji --instafail --cov=./scripts --cov-append --cov-report html:logs/coverage"
testpaths = ["tests"]
console_output_style = "progress"
junit_logging = "all"
log_cli = true
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s - [%(levelname)s] - %(name)s - (%(filename)s).%(funcName)s(%(lineno)d) - %(message)s"
log_cli_level = "DEBUG"
log_file = "logs/pytest-logs.txt"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
log_file_format = "%(asctime)s - [%(levelname)s] - %(name)s - (%(filename)s).%(funcName)s(%(lineno)d) - %(message)s"
log_file_level = "DEBUG"
log_format = "%(asctime)s - [%(levelname)s] - %(name)s - (%(filename)s).%(funcName)s(%(lineno)d) - %(message)s"
log_level = "DEBUG"
required_plugins = ["pytest-sugar", "pytest-html", "pytest-emoji", "pytest-icdiff", "pytest-instafail", "pytest-timeout", "pytest-benchmark", "pytest-cov"]
timeout = 500

[tool.coverage.run]
data_file = "logs/.coverage"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["scripts"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.uv]
package = true

[tool.mypy]
plugins = ["pydantic.mypy"]
warn_unreachable = true
disallow_untyped_defs = true
